--- a/presentation_JRom.html
+++ b/presentation_JRom.html
@@ -73,37 +73,13 @@ class: center
 
 # Warmup
 
-
-```r
-countdown(minutes = 5, seconds = 0)
-```
-
-<div class="countdown" id="timer_6061bbde" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_6061dab5" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ## TASK
 
 &gt; Grab a piece of paper and a pencil and draw this data!
-
-
-```r
-knitr::kable(
-tibble::tribble(
-~DATE, ~CAPACITY, ~DEMAND,
-"2019-04", 29263, 46193,
-"2019-05", 28037, 49131,
-"2019-06", 21596, 50124,
-"2019-07", 25895, 48850,
-"2019-08", 25813, 47602,
-"2019-09", 22427, 43697,
-"2019-10", 23605, 41058,
-"2019-11", 24263, 37364,
-"2019-12", 24243, 34364
-)
-)
-```
-
 
 
 |DATE    | CAPACITY| DEMAND|
@@ -118,7 +94,667 @@ tibble::tribble(
 |2019-11 |    24263|  37364|
 |2019-12 |    24243|  34364|
 
+???
+
+# Questions
+
+- was it easy to imagine the data?
+- how did you start drawing?
+- did you change your point of view of the data _after_ you've sketched it?
+- what questions arised when you saw the data plotted?
+
 ---
+
+## Critique
+
+<div class="countdown" id="timer_6061dbd8" style="right:0;bottom:0;" data-warnwhen="0">
+<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+### GROUP TASK
+
+&gt; How can we improve this figure?
+
+&lt;img style="width:60%;" src="improve_graph.png" alt="Bar graph showing length of hospital stay after surgeries in 2019. The data is divided into groups with length of stay below 24hrs, between 24 and 36 hrs, between 36 and 48 hrs, between 48 and 59 hrs, and above 60 hrs. The graph shows increasing share of the shortest hospital stay with time."&gt;
+&lt;!-- ![https://community.storytellingwithdata.com/exercises/how-can-we-improve-this-graph](improve_graph.png) --&gt;
+https://community.storytellingwithdata.com/exercises/how-can-we-improve-this-graph
+
+---
+
+## Assisting questions:
+
+- is the data correctly represented in the figure?
+- is the title meaningful?
+- is the graph self-explanatory?
+- can you easily draw conclusion from the graph?
+- what about use of colors?
+
+---
+
+## Data viz _design_
+
+
+???
+
+It's not enough to _show_ your data - you need to carefuly pick the datapoints you want to focus on,
+think about the fonts, the axes, the orientation of the plot, the colors(!), and title/captions.
+
+All this process is called _designing_ your visual.
+
+And as with any other design or planning, it all starts with...
+
+--
+
+- &lt;svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="rfa" style="height:0.75em;fill:currentColor;position:relative;"&gt;&lt;path d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"/&gt;&lt;/svg&gt; pen &amp; &lt;svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="rfa" style="height:0.75em;fill:currentColor;position:relative;"&gt;&lt;path d="M312 320h136V56c0-13.3-10.7-24-24-24H24C10.7 32 0 42.7 0 56v400c0 13.3 10.7 24 24 24h264V344c0-13.2 10.8-24 24-24zm129 55l-98 98c-4.5 4.5-10.6 7-17 7h-6V352h128v6.1c0 6.3-2.5 12.4-7 16.9z"/&gt;&lt;/svg&gt; paper
+
+???
+
+When you grab a blank sheet of paper, you're getting free of all the limitations that a tool of your choice can give you.
+And of the frustrations as well, if you're only beginning to learn the tool!
+With a pen and paper, you may focus on what's important for the presentation of the data...
+
+--
+
+- &lt;svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="rfa" style="height:0.75em;fill:currentColor;position:relative;"&gt;&lt;path d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"/&gt;&lt;/svg&gt; what the data tells me?
+
+???
+
+Normally, we would plot data when we want to explore some variables or when we have results of an analysis.
+One thing is known: we don't know how the data look like. We may know how it _should_ look like, though.
+That's why we may start designing with one type of plot in mind, but in the end the plot might look completely different!
+That's why it's important to draw by hand some sketches and think about the question here.
+When we finally have plotted something and understood the message behind the data, we need to improve the visual.
+
+--
+
+- **declutter** + **explain**
+
+???
+
+- do we really need all the points?
+- what about the axis ticks? and axis labels?
+- can we include a take-home message in title plot/caption?
+- is the legend in right place?
+- have we used **color** wisely? (I will talk about the colors next)
+
+--
+
+&gt; Who's my target audience?
+
+???
+
+This entire process needs to be repeated when we present our plot for different groups of people!
+
+This process is very important and one could talk about this for hours. I've just mentioned important points, and gathered some references for you to read if you're interested.
+
+---
+
+## Choosing medium and audience
+
+- popular science *vs.* scientific article
+- manuscript *vs.* presentation
+- font size, level of details
+
+&lt;img src="selcuk_corruption.png" style="width:30%;"&gt; &lt;img src="economist_graph.png" style="width:45%;"&gt;
+
+src: *Akcay, S. (2006). Corruption and human development. Cato Journal 26(1), 29-48*; 
+https://www.economist.com/graphic-detail/2011/12/02/corrosive-corruption
+
+---
+
+## Choosing color
+
+- recommended paper:    
+[Crameri, F., Shephard, G. E., &amp; Heron, P. J. *(2020)*. The misuse of colour in science communication. *Nature Communications*, 11(1), 1–10.](https://www.nature.com/articles/s41467-020-19160-7)
+
+- good tool for choosing palette: [ColorBrewer](https://colorbrewer2.org/)    
+by Cynthia Brewer
+
+- wrong color palette can _distort_ the data and _change_ the meaning of your visual
+
+---
+
+class: inverse, left, bottom
+
+## SUMMARY
+
+### know your data
+
+???
+
+So what we've learned til now:
+
+- spend time on exploring the data and check what the data tells you
+
+--
+
+### know your audience
+
+???
+
+- when critiquing the plot, have in mind who will look at it and under what circumstances!
+- you can't show the same plot in a scientific journal article, and during a presentation for students!
+
+--
+### _design_ your visual
+
+???
+
+- use time to design the visual
+- don't just show all the data you have, but choose carefully what to show and how so that the message is clear
+
+And now, let's get our hands dirty with some code
+
+---
+
+class: inverse, right, middle
+
+## Example plot with ggplot2
+
+---
+
+## Data
+
+&lt;div style="float: right; position: fixed; right: 10px; top: 10px;"&gt;
+&lt;img style="float: right; position: relative; width: 120px" src="palmer_penguins_logo.png" alt="ggiraph"/&gt;&lt;br&gt;
+&lt;/div&gt;
+
+[palmerpenguins](https://allisonhorst.github.io/palmerpenguins/)
+
+&lt;br&gt;&lt;br&gt;&lt;br&gt;
+
+
+```
+# A tibble: 344 x 8
+   species island    bill_length_mm bill_depth_mm flipper_length_mm body_mass_g
+   &lt;fct&gt;   &lt;fct&gt;              &lt;dbl&gt;         &lt;dbl&gt;             &lt;int&gt;       &lt;int&gt;
+ 1 Adelie  Torgersen           39.1          18.7               181        3750
+ 2 Adelie  Torgersen           39.5          17.4               186        3800
+ 3 Adelie  Torgersen           40.3          18                 195        3250
+ 4 Adelie  Torgersen           NA            NA                  NA          NA
+ 5 Adelie  Torgersen           36.7          19.3               193        3450
+ 6 Adelie  Torgersen           39.3          20.6               190        3650
+ 7 Adelie  Torgersen           38.9          17.8               181        3625
+ 8 Adelie  Torgersen           39.2          19.6               195        4675
+ 9 Adelie  Torgersen           34.1          18.1               193        3475
+10 Adelie  Torgersen           42            20.2               190        4250
+# … with 334 more rows, and 2 more variables: sex &lt;fct&gt;, year &lt;int&gt;
+```
+
+???
+
+I will be using this simple dataset with morphological data of penguins living on a certain island.
+
+--
+
+&gt; **IMPORTANT** start with tidy data!
+
+???
+
+I will not spend much time on this because we don't have time, but remember one thing:
+you need to start visualizing with _tidy_ dataset! What this means?
+
+--
+
+**each row is an observation, each column is a variable**
+
+---
+
+
+
+count: false
+ 
+
+.panel1-penguins_species-auto[
+
+```r
+*ggplot(data = penguins)
+```
+]
+ 
+.panel2-penguins_species-auto[
+![](presentation_JRom_files/figure-html/penguins_species_auto_01_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species-auto[
+
+```r
+ggplot(data = penguins) +
+* aes(x = bill_length_mm,
+*   y = bill_depth_mm)
+```
+]
+ 
+.panel2-penguins_species-auto[
+![](presentation_JRom_files/figure-html/penguins_species_auto_02_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species-auto[
+
+```r
+ggplot(data = penguins) +
+  aes(x = bill_length_mm,
+    y = bill_depth_mm) +
+* geom_point(
+*   aes(color = species,
+*   shape = species),
+*     size = 2)
+```
+]
+ 
+.panel2-penguins_species-auto[
+![](presentation_JRom_files/figure-html/penguins_species_auto_03_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species-auto[
+
+```r
+ggplot(data = penguins) +
+  aes(x = bill_length_mm,
+    y = bill_depth_mm) +
+  geom_point(
+    aes(color = species,
+    shape = species),
+      size = 2) +
+* geom_smooth(method = "lm",
+*   se = FALSE,
+*   aes(color = species))
+```
+]
+ 
+.panel2-penguins_species-auto[
+![](presentation_JRom_files/figure-html/penguins_species_auto_04_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species-auto[
+
+```r
+ggplot(data = penguins) +
+  aes(x = bill_length_mm,
+    y = bill_depth_mm) +
+  geom_point(
+    aes(color = species,
+    shape = species),
+      size = 2) +
+  geom_smooth(method = "lm",
+    se = FALSE,
+    aes(color = species))
+*penguins_default &lt;- last_plot()
+```
+]
+ 
+.panel2-penguins_species-auto[
+![](presentation_JRom_files/figure-html/penguins_species_auto_05_output-1.png)&lt;!-- --&gt;
+]
+
+&lt;style&gt;
+.panel1-penguins_species-auto {
+  color: black;
+  width: 54.4444444444444%;
+  hight: 32%;
+  float: left;
+  padding-left: 1%;
+  font-size: 50%
+}
+.panel2-penguins_species-auto {
+  color: black;
+  width: 43.5555555555556%;
+  hight: 32%;
+  float: left;
+  padding-left: 1%;
+  font-size: 50%
+}
+.panel3-penguins_species-auto {
+  color: black;
+  width: NA%;
+  hight: 33%;
+  float: left;
+  padding-left: 1%;
+  font-size: 50%
+}
+&lt;/style&gt;
+
+
+
+???
+
+Basics of ggplot2:
+
+- layers
+- 'aesthetics' + data + geom
+
+---
+
+
+
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+*penguins_default
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_01_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+penguins_default +
+* scale_color_manual(
+*   values = c("darkorange",
+*              "darkorchid",
+*              "cyan4")
+*   )
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_02_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+penguins_default +
+  scale_color_manual(
+    values = c("darkorange",
+               "darkorchid",
+               "cyan4")
+    ) +
+* facet_grid(rows = vars(species))
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_03_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+penguins_default +
+  scale_color_manual(
+    values = c("darkorange",
+               "darkorchid",
+               "cyan4")
+    ) +
+  facet_grid(rows = vars(species)) +
+* labs(title =
+*   "Penguin species differentation")
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_04_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+penguins_default +
+  scale_color_manual(
+    values = c("darkorange",
+               "darkorchid",
+               "cyan4")
+    ) +
+  facet_grid(rows = vars(species)) +
+  labs(title =
+    "Penguin species differentation") +
+* labs(subtitle =
+*   "based on bill depth and bill length")
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_05_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+penguins_default +
+  scale_color_manual(
+    values = c("darkorange",
+               "darkorchid",
+               "cyan4")
+    ) +
+  facet_grid(rows = vars(species)) +
+  labs(title =
+    "Penguin species differentation") +
+  labs(subtitle =
+    "based on bill depth and bill length") +
+* xlab("bill length (mm)")
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_06_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+penguins_default +
+  scale_color_manual(
+    values = c("darkorange",
+               "darkorchid",
+               "cyan4")
+    ) +
+  facet_grid(rows = vars(species)) +
+  labs(title =
+    "Penguin species differentation") +
+  labs(subtitle =
+    "based on bill depth and bill length") +
+  xlab("bill length (mm)") +
+* ylab("bill depth (mm)")
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_07_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+penguins_default +
+  scale_color_manual(
+    values = c("darkorange",
+               "darkorchid",
+               "cyan4")
+    ) +
+  facet_grid(rows = vars(species)) +
+  labs(title =
+    "Penguin species differentation") +
+  labs(subtitle =
+    "based on bill depth and bill length") +
+  xlab("bill length (mm)") +
+  ylab("bill depth (mm)") +
+* theme_minimal()
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_08_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+penguins_default +
+  scale_color_manual(
+    values = c("darkorange",
+               "darkorchid",
+               "cyan4")
+    ) +
+  facet_grid(rows = vars(species)) +
+  labs(title =
+    "Penguin species differentation") +
+  labs(subtitle =
+    "based on bill depth and bill length") +
+  xlab("bill length (mm)") +
+  ylab("bill depth (mm)") +
+  theme_minimal() +
+* theme(
+*   plot.title =
+*     element_text(face = "bold"),
+*   plot.subtitle =
+*     element_text(face = "italic"))
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_09_output-1.png)&lt;!-- --&gt;
+]
+
+---
+count: false
+ 
+
+.panel1-penguins_species2-auto[
+
+```r
+penguins_default +
+  scale_color_manual(
+    values = c("darkorange",
+               "darkorchid",
+               "cyan4")
+    ) +
+  facet_grid(rows = vars(species)) +
+  labs(title =
+    "Penguin species differentation") +
+  labs(subtitle =
+    "based on bill depth and bill length") +
+  xlab("bill length (mm)") +
+  ylab("bill depth (mm)") +
+  theme_minimal() +
+  theme(
+    plot.title =
+      element_text(face = "bold"),
+    plot.subtitle =
+      element_text(face = "italic")) +
+* theme(legend.position = "none")
+```
+]
+ 
+.panel2-penguins_species2-auto[
+![](presentation_JRom_files/figure-html/penguins_species2_auto_10_output-1.png)&lt;!-- --&gt;
+]
+
+&lt;style&gt;
+.panel1-penguins_species2-auto {
+  color: black;
+  width: 54.4444444444444%;
+  hight: 32%;
+  float: left;
+  padding-left: 1%;
+  font-size: 50%
+}
+.panel2-penguins_species2-auto {
+  color: black;
+  width: 43.5555555555556%;
+  hight: 32%;
+  float: left;
+  padding-left: 1%;
+  font-size: 50%
+}
+.panel3-penguins_species2-auto {
+  color: black;
+  width: NA%;
+  hight: 33%;
+  float: left;
+  padding-left: 1%;
+  font-size: 50%
+}
+&lt;/style&gt;
+
+
+
+???
+
+OK, to był podstawowy graf. Teraz zróbmy go wyjątkowego.
+
+- zmiana kolorystyki,
+- rozbicie na podgrafy wg.gatunku,
+- dodanie tytułu
+- podpisy na osiach
+- wygląd grafu
+
+---
+
+## tips and tricks
+
+- **kolory**
+  - [ColorBrewer](https://colorbrewer2.org)    
+  wbudowane w ggplot2 [`scale_color_brewer`](https://ggplot2.tidyverse.org/reference/scale_brewer.html)
+  - [sanzo palette](https://github.com/jmaasch/sanzo)    
+  można zainstalować z CRANa
+  - mnóstwo innych możliwości: np. [paletteer](https://emilhvitfeldt.github.io/paletteer/)
+
+- **roszerzenia**
+  - [ggrepel](https://ggrepel.slowkow.com/)    
+  ładniejsze pozycjonowanie napisów
+  - [gggenes](https://wilkox.org/gggenes/)    
+  wizualizacja genów jako strzałek
+  - mnóstwo innych możliwości: [ggextensions](https://exts.ggplot2.tidyverse.org/gallery/)
+
+???
+
+Jest mnóstwo innych pakietów, które pozwalają na dopasowanie naszych obrazków
+do naszego gustu.
 
 
     </textarea>
