--- a/presentation_JRom.html
+++ b/presentation_JRom.html
@@ -77,7 +77,7 @@ class: inverse, right, bottom
 
 # Warmup
 
-<div class="countdown" id="timer_60953082" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a3ba27" style="top:0;right:0;" data-audio="true" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -111,8 +111,8 @@ class: inverse, right, bottom
 
 ## Critique
 
-<div class="countdown" id="timer_609530a5" style="top:0;right:0;" data-audio="true" data-warnwhen="15">
-<code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<div class="countdown" id="timer_60a3bd7a" style="top:0;right:0;" data-audio="true" data-warnwhen="15">
+<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ### GROUP TASK
@@ -128,9 +128,13 @@ https://community.storytellingwithdata.com/exercises/how-can-we-improve-this-gra
 ## Assisting questions:
 
 - is the data correctly represented in the figure?
+
 - is the title meaningful?
+
 - is the graph self-explanatory?
+
 - can you easily draw conclusion from the graph?
+
 - what about use of colors?
 
 ---
