--- a/presentation_JRom.html
+++ b/presentation_JRom.html
@@ -51,6 +51,16 @@ class: middle, center
 
 https://jrom.bitbucket.io/homepage/
 
+???
+
+Couple of words about me - I am a bioinformatician/biostatistician, I love
+visualizing data and programming, and I am a co-founder of R-Ladies Bergen.
+We have actually a very cool meetup today at R-Ladies Bergen - if you want
+to watch some entertaining show about visualization and statistics, join
+us at 6PM!
+
+https://www.meetup.com/rladies-bergen/events/277543752/
+
 ---
 
 class: inverse, bottom
@@ -61,6 +71,14 @@ class: inverse, bottom
 - not an art course
 - not much about color theory
 - not much about tidying data
+
+???
+
+OK - back to the talk. "Basics of data visualization". Since time is of
+essence today, I will try to keep it short. I will not teach you how to
+program, I will not teach you about artistic stuff in visualization, I
+will only touch on the color theory and I will not talk about how to create
+tidy, analysis-ready datasets.
 
 ---
 
@@ -73,11 +91,18 @@ class: inverse, right, bottom
 - how to __start__ with ggplot2
 - where to search for help
 
+???
+
+Today, I will focus on how to adapt the visualization for various occasions,
+how to find the message you want to convey through your visualization,
+how to start with the ggplot2 R-package, which is a powerful tool, and
+where to search for help.
+
 ---
 
 # Warmup
 
-<div class="countdown" id="timer_60a3ba27" style="top:0;right:0;" data-audio="true" data-warnwhen="15">
+<div class="countdown" id="timer_60a4c727" style="top:0;right:0;" data-audio="true" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -111,7 +136,7 @@ class: inverse, right, bottom
 
 ## Critique
 
-<div class="countdown" id="timer_60a3bd7a" style="top:0;right:0;" data-audio="true" data-warnwhen="15">
+<div class="countdown" id="timer_60a4c5c3" style="top:0;right:0;" data-audio="true" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -123,7 +148,7 @@ class: inverse, right, bottom
 &lt;!-- ![https://community.storytellingwithdata.com/exercises/how-can-we-improve-this-graph](improve_graph.png) --&gt;
 https://community.storytellingwithdata.com/exercises/how-can-we-improve-this-graph
 
----
+???
 
 ## Assisting questions:
 
@@ -136,6 +161,10 @@ https://community.storytellingwithdata.com/exercises/how-can-we-improve-this-gra
 - can you easily draw conclusion from the graph?
 
 - what about use of colors?
+
+## Conclusions
+
+There are a lot of choices to make when creating a visualization.
 
 ---
 
@@ -181,12 +210,13 @@ When we finally have plotted something and understood the message behind the dat
 
 - do we really need all the points?
 - what about the axis ticks? and axis labels?
-- can we include a take-home message in title plot/caption?
+- can we include a take-home message in title/caption?
 - is the legend in right place?
 - have we used **color** wisely? (I will talk about the colors next)
 
 --
 
+&lt;br&gt;
 &gt; Who's my target audience?
 
 ???
@@ -212,11 +242,11 @@ https://www.economist.com/graphic-detail/2011/12/02/corrosive-corruption
 
 ## Choosing color
 
-- recommended paper:    
-[Crameri, F., Shephard, G. E., &amp; Heron, P. J. *(2020)*. The misuse of colour in science communication. *Nature Communications*, 11(1), 1–10.](https://www.nature.com/articles/s41467-020-19160-7)
-
 - good tool for choosing palette: [ColorBrewer](https://colorbrewer2.org/)    
 by Cynthia Brewer
+
+- recommended paper:    
+[Crameri, F., Shephard, G. E., &amp; Heron, P. J. *(2020)*. The misuse of colour in science communication. *Nature Communications*, 11(1), 1–10.](https://www.nature.com/articles/s41467-020-19160-7)
 
 - wrong color palette can _distort_ the data and _change_ the meaning of your visual
 
@@ -743,11 +773,13 @@ OK, to był podstawowy graf. Teraz zróbmy go wyjątkowego.
 
 ---
 
-## Extensions
+## More...
 
-[ggextensions](https://exts.ggplot2.tidyverse.org/gallery/)
+- **Extensions:** [ggextensions](https://exts.ggplot2.tidyverse.org/gallery/)
 
+- [R-Ladies Bergen](https://join.slack.com/t/rladies-norway/shared_invite/zt-5unpqk3m-GnaNwMfr1HminEQ6vym~zA) and [R-Ladies Global](https://rladies-community-slack.herokuapp.com/) <svg aria-hidden="true" role="img" viewBox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M94.12 315.1c0 25.9-21.16 47.06-47.06 47.06S0 341 0 315.1c0-25.9 21.16-47.06 47.06-47.06h47.06v47.06zm23.72 0c0-25.9 21.16-47.06 47.06-47.06s47.06 21.16 47.06 47.06v117.84c0 25.9-21.16 47.06-47.06 47.06s-47.06-21.16-47.06-47.06V315.1zm47.06-188.98c-25.9 0-47.06-21.16-47.06-47.06S139 32 164.9 32s47.06 21.16 47.06 47.06v47.06H164.9zm0 23.72c25.9 0 47.06 21.16 47.06 47.06s-21.16 47.06-47.06 47.06H47.06C21.16 243.96 0 222.8 0 196.9s21.16-47.06 47.06-47.06H164.9zm188.98 47.06c0-25.9 21.16-47.06 47.06-47.06 25.9 0 47.06 21.16 47.06 47.06s-21.16 47.06-47.06 47.06h-47.06V196.9zm-23.72 0c0 25.9-21.16 47.06-47.06 47.06-25.9 0-47.06-21.16-47.06-47.06V79.06c0-25.9 21.16-47.06 47.06-47.06 25.9 0 47.06 21.16 47.06 47.06V196.9zM283.1 385.88c25.9 0 47.06 21.16 47.06 47.06 0 25.9-21.16 47.06-47.06 47.06-25.9 0-47.06-21.16-47.06-47.06v-47.06h47.06zm0-23.72c-25.9 0-47.06-21.16-47.06-47.06 0-25.9 21.16-47.06 47.06-47.06h117.84c25.9 0 47.06 21.16 47.06 47.06 0 25.9-21.16 47.06-47.06 47.06H283.1z"/></svg>
 
+- Some useful links: https://jromanowska.github.io/Visualization-basics-for-EPINOR/references.html
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
